<resources xmlns:xliff="http://schemas.android.com/apk/res/android">
    <string name="app_name">Sunshine</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="location_title">Location</string>
    <string name="location_key">location</string>
    <string name="location_status_key">location status</string>
    <string name="location_default_value">Stockholm</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="unit_system_key">unit_system</string>
    <string name="action_location">Location</string>
    <string name="title_menu_share">Share</string>
    <string name="descript">Weather Image</string>
    <string name="colored">Colored</string>
    <string name="mono">Mono</string>


    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_humidity"><xliff:g id="humidity">%d</xliff:g>%%</string>
    <string name="format_wind_km"><xliff:g id="speed">%1.0f km/h </xliff:g><xliff:g id="destination">%2$s</xliff:g> </string>
    <string name="format_pressure"><xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="key_notifications">Notifications</string>
    <string name="title_notifications">Receive Notifications</string>


    <string name="no_weather_available">No Weather Information Available The network is not available
        to fetch weather data</string>
    <string name="empty_forecast_list_server_down"> No weather information available.
        The server is not returning data</string>
    <string name="empty_forecast_list_server_error">No weather information available.
        The server is not returning valid data. Please check for an updated version of Sunshine</string>
    <string name="empty_forecast_list_invalid_location">No weather information available.
        The location in settings is not recognized by the weather server.</string>

    <!-- Strings used when displaying the state of the Location in settings -->
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... </string>
    <string name="pref_is_tablet">is Tablet</string>

    <!-- Content description for the get current location button in the location preference -->
    <string name="pref_current_location_desc">Use my location</string>

    <!-- Key name for storing location latlong in SharedPreferences -->
    <string name="pref_location_latitude">loc latitude</string>
    <string name="pref_location_longitude">loc longitude</string>

    <!-- Localization-->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="clear">Clear</string>
    <string name="clouds">Clouds</string>
    <string name="n">N</string>
    <string name="ne">NE</string>
    <string name="e">E</string>
    <string name="se">SE</string>
    <string name="s">S</string>
    <string name="sw">SW</string>
    <string name="w">W</string>
    <string name="nw">NW</string>

    <string name="url">Url</string>
    <string name="icons_key">icons_key</string>

    <string name="server">AIzaSyCjsxP5y-dFvjiDjoVa5GDT_Z25hnv5Hys</string>
    <string name="api_key">AIzaSyAjdvnL5q1NEvwG5jxkmfiTi8ZazRJmS9o</string>

    <!-- Used to form a severe weather alert that reads "Heads up: <weather> in <location>!" -->
    <string name="gcm_weather_alert">Heads up: %1$s in %2$s!</string>
    // TODO: Get the SenderID from the Developer Console
    <string name="gcm_SenderId" translatable="false">39208608892</string>
    <!-- For Google Places API Attributions -->
    <string name="attribution_text">Powered by Google</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="detail_icon_transition_name">Detail Icon</string>
    <string name="widget_data_not_available">Not Available</string>

</resources>
