<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.igorklimov.sunshine.helpers.LocationEditTextPreference
        android:defaultValue="@string/location_default_value"
        android:inputType="text"
        android:key="@string/location_key"
        android:singleLine="true"
        android:title="@string/location_title"
        android:summary="%s"
        custom:minimumLength="3" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/units_names_array"
        android:entryValues="@array/units_array"
        android:key="@string/unit_system_key"
        android:summary="%s"
        android:title="Unit System" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/icons_names_array"
        android:entryValues="@array/icons_array"
        android:key="@string/icons_key"
        android:summary="%s"
        android:title="Icon Style" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/key_notifications"
        android:title="@string/title_notifications" />

</PreferenceScreen>